# learn-python

./: .gitignore  README.md  app.py  app10_1_mutability.py  app10_2_mutability.py  app11_layout.py  app11_layout_plotly.py  app2.py  app20_module_counter.py  app20_using_module.py  app3_reactive.py  app4_part1_conclusion.py  app5_dog_traits.py  app6_reactive_calc.py  app7_events_isolate.py  app8_reactive_event.py  app9_reactive_values.py  demo.py  ecom_sales.csv  imgui.ini  plot.py  podcast_to_audio.py  requirements.txt  setup.cfg  setup.py  threshold.py
01_challenge_kiss/: after.py
02_challenge_type_annotations/: after.py  completed.py
03_challenge_decoupling/completed/: bank.py  (+3 more)
05_challenge_string_formatting/: after.py  after_v2.py  completed.py  completed_tabulate.py
06_challenge_demeter/: after.py  before.py  completed.py  completed_decorator_.py
07_challenge_better_discount/: after.py  before.py  completed.py  completed_enum.py
08_challenge_payment_strategy/: completed_class.py  completed_func.py
13_challenge_inheritance/: after.py  completed.py
14_challenge_abstraction/: after.py  completed.py
15_challenge_higher_order_functions/: after.py  completed.py  completed_all_func.py
16_challenge_configuration/: after.py  completed.py  config.json  my_config.json
19_challenge_itertools/: after.py  completed.py
20_challenge_intimacy/: completed.py
21_undo_redo/: completed_v1.py  completed_v2.py
chap1/: draft_sales_dashbaord.py  draft_sales_dashboard.py
chap2/: draft_sales_dashboard.py
test_scripts/: test_1_empty_init.py  test_2__factory.py
(+34 files in other folders)
