[metadata]
name = instr
version = 0.0.1
author = rbodev
author_email = rbodev@example.com
description = Exploring inheritance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = instr
packages = find:
python_requires = ">=3.7"

[options.packages.find]
where = instr