[metadata]
name = instr
version = 0.0.1
author = rbodev
author_email = rbodev@example.com
description = inheritance vs. composition
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = 
    = instr
packages = find:
python_requires = >=3.7

[options.packages.find]
where = instr